--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "homepage": "https://github.com/wsbf/radical",
   "dependencies": {
     "angular": "^1.6.0",
+    "angular-resource": "^1.6.1",
     "angular-ui-bootstrap": "^2.3.1",
-    "electron": "^1.4.12"
+    "angular-ui-router": "^0.3.2",
+    "bootstrap": "^3.3.7",
+    "electron": "^1.4.12",
+    "lodash": "^4.17.3"
   }
 }
