--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "angular": "^1.6.0",
     "angular-resource": "^1.6.1",
+    "angular-sanitize": "^1.6.5",
     "angular-ui-bootstrap": "^2.3.1",
     "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
     "electron": "^1.4.12",
-    "lodash": "^4.17.3"
+    "lodash": "^4.17.3",
+    "videogular": "^2.2.1"
   }
 }
